refactor: standardize slug formatting and improve content structure across classes and programs

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -136,7 +136,7 @@ const moreWaysToLearn = [
           <a
             slot="learn-more"
             class="program-learn-more-link"
-            href="/programs/classes/python/">Learn More</a
+            href="/classes/python">Learn More</a
           >
         </CardFooter>
       </ProgramCard>
@@ -182,7 +182,7 @@ const moreWaysToLearn = [
           <a
             slot="learn-more"
             class="program-learn-more-link"
-            href="/programs/classes/java/">Learn More</a
+            href="/classes/java">Learn More</a
           >
         </CardFooter>
       </ProgramCard>
